MDEV-16787 optimistic parallel replication fails on spider Add a system variable spider_slave_trx_isolation. - spider_slave_trx_isolation   The transaction isolation level when Spider table is used by slave SQL thread.   -1 : OFF    0 : READ UNCOMMITTED    1 : READ COMMITTED    2 : REPEATABLE READ    3 : SERIALIZABLE   The default value is -1

Miscellaneous Spider typos